--- a/lib/generators/piwik_analytics/install/templates/config/piwik.yml
+++ b/lib/generators/piwik_analytics/install/templates/config/piwik.yml
@@ -8,6 +8,8 @@
 #   The url of your piwik instance (e.g. localhost/piwik/
 # id_site
 #   The id of your website inside Piwik
+# trackingTimer
+#   Changing the Pause Timer (http://developer.piwik.org/api-reference/tracking-javascript)
 #
 production:
   piwik:
@@ -15,6 +17,7 @@ production:
     url: localhost
     use_async: false
     disabled: false
+    trackingTimer: false
 
 development:
   piwik:
@@ -23,6 +26,7 @@ development:
     disabled: true
     use_async: false
     hostname: localhost
+    trackingTimer: false
 
 test:
   piwik:
@@ -31,3 +35,4 @@ test:
     disabled: true
     use_async: false
     hostname: localhost
+    trackingTimer: false
