--- a/lib/generators/piwik_analytics/install/templates/config/piwik.yml
+++ b/lib/generators/piwik_analytics/install/templates/config/piwik.yml
@@ -3,7 +3,7 @@
 # disabled
 #   false if tracking tag should be shown
 # use_async
-#   Set to true if you want to use asynchronous tracking
+#   Set to false if you don't want to use asynchronous tracking (not recomended)
 # url
 #   The url of your piwik instance (e.g. localhost/piwik/
 # id_site
@@ -25,7 +25,6 @@ development:
     url: localhost
     disabled: true
     use_async: false
-    hostname: localhost
     trackingTimer: false
 
 test:
@@ -34,5 +33,4 @@ test:
     url: localhost
     disabled: true
     use_async: false
-    hostname: localhost
     trackingTimer: false
